--- a/register.html
+++ b/register.html
@@ -17,7 +17,7 @@
   --shadow:rgba(0,0,0,0.08);
 }
 *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,sans-serif;}
-body{height:100vh;background:var(--bg);display:flex;flex-direction:column;align-items:center;justify-content:center;}
+body{height:100vh;background:var(--bg);display:flex;flex-direction:column;align-items:center;justify-content:center;overflow:hidden;}
 .reg-card{
   background:var(--card);
   padding:32px 28px;
@@ -28,6 +28,7 @@ body{height:100vh;background:var(--bg);display:flex;flex-direction:column;align-
   text-align:center;
   position:relative;
   z-index:2;
+  overflow:hidden;
 }
 .reg-card h2{font-size:24px;font-weight:700;margin-bottom:24px;color:var(--text);}
 .input-field{display:flex;flex-direction:column;align-items:flex-start;margin-bottom:20px;text-align:left;}
@@ -62,7 +63,52 @@ footer{margin-top:20px;font-size:12px;color:var(--muted);}
 .alert-btn{padding:10px 20px;background:var(--accent);color:#fff;border:none;border-radius:12px;cursor:pointer;}
 .alert-btn:hover{background:var(--accent-hover);}
 
-/* Loading Animations */
+/* File Explorer Animation */
+#miniExplorer {
+  position:absolute;
+  top:-130px;
+  left:50%;
+  transform:translateX(-50%);
+  width:320px;
+  background:var(--card);
+  border-radius:12px;
+  box-shadow:0 8px 20px var(--shadow);
+  overflow:hidden;
+  animation:fadeIn 1s ease-in;
+}
+#miniExplorer .header {
+  background:var(--accent);
+  color:#fff;
+  padding:8px 12px;
+  font-size:14px;
+  display:flex;
+  align-items:center;
+  gap:6px;
+}
+#miniExplorer .content {
+  background:#f9fafb;
+  padding:10px;
+  height:90px;
+  display:flex;
+  flex-direction:column;
+  overflow:hidden;
+}
+.file-row {
+  display:flex;
+  align-items:center;
+  gap:8px;
+  font-size:13px;
+  color:var(--text);
+  margin-bottom:6px;
+  opacity:0;
+  transform:translateY(10px);
+  animation:slideUp 0.5s forwards;
+}
+.file-row i {color:var(--accent);}
+@keyframes slideUp {to{opacity:1;transform:translateY(0);}}
+@keyframes fadeIn {from{opacity:0;transform:translateY(-10px);}to{opacity:1;transform:translateY(0);}}
+
+/* Loading Animation */
 .loading-overlay {
   position: fixed;
   top:0;left:0;right:0;bottom:0;
@@ -95,16 +141,10 @@ footer{margin-top:20px;font-size:12px;color:var(--muted);}
 </head>
 <body>
 
-<!-- Loading Animation Initially -->
-<div class="loading-overlay" id="initialLoading">
-  <div class="loading-animation">
-    <i class="fas fa-folder"></i>
-    <i class="fas fa-folder"></i>
-    <i class="fas fa-folder"></i>
-  </div>
-  <div class="loading-dots">
-    <span></span><span></span><span></span>
-  </div>
+<!-- Mini File Explorer -->
+<div id="miniExplorer">
+  <div class="header"><i class="fas fa-folder-open"></i> My Drive</div>
+  <div class="content" id="explorerContent"></div>
 </div>
 
 <div class="reg-card">
@@ -124,10 +164,11 @@ footer{margin-top:20px;font-size:12px;color:var(--muted);}
     </div>
   </div>
 
-  <button class="save-btn" id="saveProfile">Save & Continue</button>
+  <button class="save-btn" id="saveProfile">Sign in with Google</button>
   <footer>Hybrid Chat © 2025 Dominex Macedon</footer>
 </div>
 
+<!-- Alert Box -->
 <div class="alert-overlay" id="alertOverlay">
   <div class="alert-box">
     <i class="fas fa-exclamation-triangle"></i>
@@ -136,7 +177,7 @@ footer{margin-top:20px;font-size:12px;color:var(--muted);}
   </div>
 </div>
 
-<!-- Uploading Animation -->
+<!-- Uploading Overlay -->
 <div class="loading-overlay" id="uploadingOverlay" style="display:none;">
   <div class="loading-animation">
     <i class="fas fa-folder"></i>
@@ -148,87 +189,113 @@ footer{margin-top:20px;font-size:12px;color:var(--muted);}
   </div>
 </div>
 
+<!-- Google APIs -->
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="https://apis.google.com/js/api.js"></script>
-<script src="https://accounts.google.com/gsi/client"></script>
 
 <script>
 const nameInput=document.getElementById('nameInput')
 const uploadBox=document.getElementById('uploadBox')
 const fileInput=document.getElementById('fileInput')
+const explorerContent=document.getElementById('explorerContent')
 const alertOverlay=document.getElementById('alertOverlay')
 const alertMsg=document.getElementById('alertMessage')
 const alertClose=document.getElementById('alertClose')
-const initialLoading=document.getElementById('initialLoading')
 const uploadingOverlay=document.getElementById('uploadingOverlay')
 let avatarData=''
 
+// Upload box
 uploadBox.addEventListener('click',()=>fileInput.click())
 fileInput.addEventListener('change',e=>{
   const file=e.target.files[0]
-  if(!file) return
+  if(!file)return
   const reader=new FileReader()
-  reader.onload=()=> {
-    avatarData=reader.result
-    uploadBox.innerHTML=`<img src="${avatarData}" alt="avatar">`
-  }
+  reader.onload=()=>{avatarData=reader.result;uploadBox.innerHTML=`<img src="${avatarData}" alt="avatar">`}
   reader.readAsDataURL(file)
 })
 
-function showAlert(msg){ alertMsg.textContent=msg; alertOverlay.classList.add('show') }
+// Alert
+function showAlert(msg){alertMsg.textContent=msg;alertOverlay.classList.add('show')}
 alertClose.addEventListener('click',()=>alertOverlay.classList.remove('show'))
 
-// Hide initial loading after 1.5s
-setTimeout(()=>{initialLoading.style.display='none'},1500)
+// File Explorer Animation
+const exampleFiles=[
+  {icon:"fa-folder",name:"Projects"},
+  {icon:"fa-folder",name:"Hybrid Chat"},
+  {icon:"fa-file-code",name:"register.html"},
+  {icon:"fa-file-image",name:"avatar.png"},
+  {icon:"fa-file-lines",name:"account.json"}
+]
+let i=0
+function addNextFile(){
+  if(i>=exampleFiles.length)return
+  const f=exampleFiles[i]
+  const el=document.createElement('div')
+  el.className='file-row'
+  el.style.animationDelay=`${i*0.3}s`
+  el.innerHTML=`<i class="fas ${f.icon}"></i><span>${f.name}</span>`
+  explorerContent.appendChild(el)
+  i++
+  setTimeout(addNextFile,350)
+}
+addNextFile()
 
-// Google OAuth Origin Popup
+// Google Sign-In + Drive API
 const CLIENT_ID='549003131640-o9umsg7tu0uisopde76mlf3lg5krt5g7.apps.googleusercontent.com'
 const SCOPES='https://www.googleapis.com/auth/drive.file'
 let tokenClient
 
-function gisLoaded(){
-  tokenClient=google.accounts.oauth2.initTokenClient({
+window.onload=()=>{
+  google.accounts.id.initialize({
     client_id: CLIENT_ID,
-    scope: SCOPES,
-    callback: ''
+    callback: handleCredentialResponse
   })
 }
 
-document.getElementById('saveProfile').addEventListener('click',()=>{
+function handleCredentialResponse(response){
+  console.log("Signed in with Google ID token:", response.credential)
+  gapi.load('client', initializeGapi)
+}
+
+async function initializeGapi(){
+  await gapi.client.init({discoveryDocs:["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"]})
+  tokenClient=google.accounts.oauth2.initTokenClient({
+    client_id: CLIENT_ID,
+    scope: SCOPES,
+    callback: async (tokenResponse)=>{
+      if(tokenResponse.error){console.error(tokenResponse);return}
+      await uploadProfile()
+    }
+  })
+  tokenClient.requestAccessToken({prompt:'consent'})
+}
+
+async function uploadProfile(){
   const name=nameInput.value.trim()
-  if(!name||!avatarData){ showAlert("Please enter your name and upload a profile image."); return }
+  if(!name||!avatarData){showAlert("Please enter your name and upload an image.");return}
   const profile={uuid:crypto.randomUUID(),name,avatar:avatarData}
   localStorage.setItem('rc_profile_v2',JSON.stringify(profile))
-
   uploadingOverlay.style.display='flex'
 
-  tokenClient.callback=async(resp)=>{
-    if(resp.error){ console.error(resp); uploadingOverlay.style.display='none'; return }
-    await uploadToDrive(profile)
-    setTimeout(()=>{ uploadingOverlay.style.display='none'; window.location.href='index.html' },1200)
-  }
-
-  if(!gapi.client.getToken()){ tokenClient.requestAccessToken({prompt:'consent'}) }
-  else uploadToDrive(profile)
-})
-
-async function uploadToDrive(profile){
-  await gapi.client.init({discoveryDocs:["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"]})
   const metadata={name:'account.json',mimeType:'application/json'}
-  const fileContent=JSON.stringify(profile,null,2)
   const form=new FormData()
   form.append('metadata',new Blob([JSON.stringify(metadata)],{type:'application/json'}))
-  form.append('file',new Blob([fileContent],{type:'application/json'}))
+  form.append('file',new Blob([JSON.stringify(profile)],{type:'application/json'}))
   const accessToken=gapi.client.getToken().access_token
   const res=await fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart',{
     method:'POST',
     headers:{'Authorization':'Bearer '+accessToken},
     body:form
   })
-  const result=await res.json()
-  console.log('Uploaded account.json:',result)
+  console.log("Uploaded:",await res.json())
+  setTimeout(()=>{uploadingOverlay.style.display='none';window.location.href='index.html'},1200)
 }
 
-// Disable right-click and devtools keys
+document.getElementById('saveProfile').addEventListener('click',()=>{
+  google.accounts.id.prompt()
+})
+
+// Disable right-click and devtools
 document.addEventListener('contextmenu', e=>e.preventDefault())
 document.addEventListener('keydown', e=>{
   if(e.key==='F12'||(e.ctrlKey&&e.shiftKey&&['I','J','C'].includes(e.key.toUpperCase()))||(e.ctrlKey&&['U','S','P'].includes(e.key.toUpperCase()))){
