--- a/register.html
+++ b/register.html
@@ -17,176 +17,112 @@
   --shadow:rgba(0,0,0,0.08);
 }
 *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,sans-serif;}
-body{height:100vh;background:var(--bg);display:flex;flex-direction:column;align-items:center;justify-content:center;overflow:hidden;}
+body{
+  height:100vh;background:var(--bg);
+  display:flex;align-items:center;justify-content:center;
+  overflow:hidden;
+}
 .reg-card{
   background:var(--card);
-  padding:32px 28px;
-  border-radius:16px;
+  padding:40px 32px;
+  border-radius:20px;
   width:100%;
   max-width:400px;
   box-shadow:0 8px 24px var(--shadow);
   text-align:center;
   position:relative;
-  z-index:2;
-  overflow:hidden;
 }
-.reg-card h2{font-size:24px;font-weight:700;margin-bottom:24px;color:var(--text);}
-.input-field{display:flex;flex-direction:column;align-items:flex-start;margin-bottom:20px;text-align:left;}
-.input-field label{font-size:14px;color:var(--muted);margin-bottom:6px;}
-.input-field input[type="text"]{
-  width:100%;padding:12px 16px;font-size:15px;
-  border:1px solid #e5e7eb;border-radius:8px;outline:none;transition:all 0.2s ease;
-}
-.input-field input[type="text"]:focus{border-color:var(--accent);box-shadow:0 4px 12px var(--shadow);}
-.upload-box{
-  width:100%;padding:20px;border:2px dashed #e5e7eb;border-radius:12px;cursor:pointer;
-  display:flex;flex-direction:column;align-items:center;justify-content:center;
-  transition:all 0.2s ease;background:#f3f4f6;
-}
-.upload-box:hover{border-color:var(--accent);background:#eef2ff;}
-.upload-box img{width:80px;height:80px;border-radius:50%;object-fit:cover;}
-.save-btn{
-  width:100%;padding:14px;background:var(--accent);color:#fff;font-size:16px;font-weight:600;
-  border:none;border-radius:12px;cursor:pointer;transition:all 0.2s ease;
-}
-.save-btn:hover{background:var(--accent-hover);}
-footer{margin-top:20px;font-size:12px;color:var(--muted);}
-.alert-overlay{
-  position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,0.5);
-  display:flex;align-items:center;justify-content:center;opacity:0;pointer-events:none;transition:opacity 0.3s ease;
-  z-index:1000;
-}
-.alert-overlay.show{opacity:1;pointer-events:auto;}
-.alert-box{background:var(--card);padding:24px 28px;border-radius:16px;text-align:center;box-shadow:0 8px 24px var(--shadow);}
-.alert-box i{font-size:28px;color:#f87171;margin-bottom:12px;}
-.alert-box p{margin-bottom:16px;color:var(--text);}
-.alert-btn{padding:10px 20px;background:var(--accent);color:#fff;border:none;border-radius:12px;cursor:pointer;}
-.alert-btn:hover{background:var(--accent-hover);}
-
-/* File Explorer Animation */
-#miniExplorer {
-  position:absolute;
-  top:-130px;
-  left:50%;
-  transform:translateX(-50%);
-  width:320px;
-  background:var(--card);
+h2{font-size:24px;font-weight:700;margin-bottom:20px;color:var(--text);}
+p{color:var(--muted);margin-bottom:24px;font-size:15px;}
+button.google-btn{
+  background:#fff;
+  border:1px solid #e5e7eb;
   border-radius:12px;
-  box-shadow:0 8px 20px var(--shadow);
-  overflow:hidden;
-  animation:fadeIn 1s ease-in;
-}
-#miniExplorer .header {
-  background:var(--accent);
-  color:#fff;
-  padding:8px 12px;
-  font-size:14px;
-  display:flex;
-  align-items:center;
-  gap:6px;
-}
-#miniExplorer .content {
-  background:#f9fafb;
-  padding:10px;
-  height:90px;
-  display:flex;
-  flex-direction:column;
-  overflow:hidden;
-}
-.file-row {
-  display:flex;
-  align-items:center;
-  gap:8px;
-  font-size:13px;
+  padding:12px 16px;
+  font-size:15px;
+  font-weight:500;
   color:var(--text);
-  margin-bottom:6px;
-  opacity:0;
-  transform:translateY(10px);
-  animation:slideUp 0.5s forwards;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  gap:10px;
+  width:100%;
+  cursor:pointer;
+  transition:all 0.2s ease;
 }
-.file-row i {color:var(--accent);}
-@keyframes slideUp {to{opacity:1;transform:translateY(0);}}
-@keyframes fadeIn {from{opacity:0;transform:translateY(-10px);}to{opacity:1;transform:translateY(0);}}
+button.google-btn:hover{background:#f3f4f6;}
+.google-btn img{width:22px;height:22px;}
+footer{margin-top:24px;font-size:12px;color:var(--muted);}
 
-/* Loading Animation */
-.loading-overlay {
-  position: fixed;
-  top:0;left:0;right:0;bottom:0;
-  display:flex;flex-direction:column;align-items:center;justify-content:center;
-  background:rgba(255,255,255,0.95);
-  z-index:999;
-  opacity:1;
+/* Profile display */
+.profile{
+  display:none;
+  flex-direction:column;
+  align-items:center;
+  animation:fadeIn 0.6s ease forwards;
 }
-.loading-animation {
+.profile img{
+  width:90px;height:90px;border-radius:50%;
+  margin-bottom:12px;
+  box-shadow:0 4px 10px var(--shadow);
+}
+.profile h3{font-size:20px;font-weight:600;margin-bottom:4px;}
+.profile span{font-size:14px;color:var(--muted);}
+@keyframes fadeIn{from{opacity:0;transform:translateY(10px);}to{opacity:1;transform:translateY(0);}}
+
+/* Loading animation */
+.loading-overlay{
+  position:fixed;top:0;left:0;right:0;bottom:0;
+  display:none;flex-direction:column;align-items:center;justify-content:center;
+  background:rgba(255,255,255,0.95);z-index:999;
+}
+.loading-animation{
   display:flex;align-items:center;gap:20px;
   animation: float 2s ease-in-out infinite;
 }
-@keyframes float {
-  0%,100% { transform:translateY(0);}
-  50% { transform:translateY(-8px);}
+@keyframes float{
+  0%,100%{transform:translateY(0);}
+  50%{transform:translateY(-8px);}
 }
-.loading-animation i {font-size:50px;color:var(--accent);transition:all 0.5s ease;}
-.loading-dots {
-  display:flex;gap:6px;margin-top:12px;justify-content:center;
-}
-.loading-dots span {
+.loading-animation i{font-size:48px;color:var(--accent);}
+.loading-dots{display:flex;gap:6px;margin-top:12px;}
+.loading-dots span{
   width:8px;height:8px;background:var(--accent);
   border-radius:50%;
-  animation: dots 1.4s infinite ease-in-out;
+  animation:dots 1.4s infinite ease-in-out;
 }
 .loading-dots span:nth-child(2){animation-delay:0.2s;}
 .loading-dots span:nth-child(3){animation-delay:0.4s;}
-@keyframes dots {0%,80%,100%{transform:scale(0);}40%{transform:scale(1);}}
+@keyframes dots{0%,80%,100%{transform:scale(0);}40%{transform:scale(1);}}
 </style>
 </head>
 <body>
 
-<!-- Mini File Explorer -->
-<div id="miniExplorer">
-  <div class="header"><i class="fas fa-folder-open"></i> My Drive</div>
-  <div class="content" id="explorerContent"></div>
-</div>
-
 <div class="reg-card">
-  <h2>Create Your Profile</h2>
+  <h2>Welcome to Hybrid Chat</h2>
+  <p>Sign in securely with Google to continue.</p>
 
-  <div class="input-field">
-    <label>Name</label>
-    <input type="text" id="nameInput" placeholder="Enter your name">
+  <button class="google-btn" id="googleSignIn">
+    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google">
+    Sign in with Google
+  </button>
+
+  <div class="profile" id="profile">
+    <img id="profilePic" alt="Profile Picture">
+    <h3 id="profileName"></h3>
+    <span id="profileEmail"></span>
   </div>
 
-  <div class="input-field">
-    <label>Profile Image</label>
-    <div class="upload-box" id="uploadBox">
-      <i class="fas fa-user-circle" style="font-size:54px;color:var(--muted)"></i>
-      <p style="font-size:0.9em;color:var(--muted);margin-top:6px;">Click to upload</p>
-      <input type="file" id="fileInput" accept="image/*" style="display:none;">
-    </div>
-  </div>
-
-  <button class="save-btn" id="saveProfile">Sign in with Google</button>
   <footer>Hybrid Chat © 2025 Dominex Macedon</footer>
 </div>
 
-<!-- Alert Box -->
-<div class="alert-overlay" id="alertOverlay">
-  <div class="alert-box">
-    <i class="fas fa-exclamation-triangle"></i>
-    <p id="alertMessage">Please fill all fields.</p>
-    <button class="alert-btn" id="alertClose">OK</button>
-  </div>
-</div>
-
-<!-- Uploading Overlay -->
-<div class="loading-overlay" id="uploadingOverlay" style="display:none;">
+<div class="loading-overlay" id="loadingOverlay">
   <div class="loading-animation">
-    <i class="fas fa-folder"></i>
+    <i class="fab fa-google"></i>
     <i class="fas fa-arrow-right" style="font-size:28px;color:#6b7280;"></i>
     <i class="fab fa-google-drive"></i>
   </div>
-  <div class="loading-dots">
-    <span></span><span></span><span></span>
-  </div>
+  <div class="loading-dots"><span></span><span></span><span></span></div>
 </div>
 
 <!-- Google APIs -->
@@ -194,115 +130,68 @@ footer{margin-top:20px;font-size:12px;color:var(--muted);}
 <script src="https://apis.google.com/js/api.js"></script>
 
 <script>
-const nameInput=document.getElementById('nameInput')
-const uploadBox=document.getElementById('uploadBox')
-const fileInput=document.getElementById('fileInput')
-const explorerContent=document.getElementById('explorerContent')
-const alertOverlay=document.getElementById('alertOverlay')
-const alertMsg=document.getElementById('alertMessage')
-const alertClose=document.getElementById('alertClose')
-const uploadingOverlay=document.getElementById('uploadingOverlay')
-let avatarData=''
+const CLIENT_ID='549003131640-o9umsg7tu0uisopde76mlf3lg5krt5g7.apps.googleusercontent.com';
+const SCOPES='https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email';
+let tokenClient;
 
-// Upload box
-uploadBox.addEventListener('click',()=>fileInput.click())
-fileInput.addEventListener('change',e=>{
-  const file=e.target.files[0]
-  if(!file)return
-  const reader=new FileReader()
-  reader.onload=()=>{avatarData=reader.result;uploadBox.innerHTML=`<img src="${avatarData}" alt="avatar">`}
-  reader.readAsDataURL(file)
-})
+const loadingOverlay=document.getElementById('loadingOverlay');
+const googleBtn=document.getElementById('googleSignIn');
+const profileCard=document.getElementById('profile');
+const profilePic=document.getElementById('profilePic');
+const profileName=document.getElementById('profileName');
+const profileEmail=document.getElementById('profileEmail');
 
-// Alert
-function showAlert(msg){alertMsg.textContent=msg;alertOverlay.classList.add('show')}
-alertClose.addEventListener('click',()=>alertOverlay.classList.remove('show'))
+googleBtn.addEventListener('click',async()=>{
+  loadingOverlay.style.display='flex';
+  await gapi.load('client',initGapi);
+});
 
-// File Explorer Animation
-const exampleFiles=[
-  {icon:"fa-folder",name:"Projects"},
-  {icon:"fa-folder",name:"Hybrid Chat"},
-  {icon:"fa-file-code",name:"register.html"},
-  {icon:"fa-file-image",name:"avatar.png"},
-  {icon:"fa-file-lines",name:"account.json"}
-]
-let i=0
-function addNextFile(){
-  if(i>=exampleFiles.length)return
-  const f=exampleFiles[i]
-  const el=document.createElement('div')
-  el.className='file-row'
-  el.style.animationDelay=`${i*0.3}s`
-  el.innerHTML=`<i class="fas ${f.icon}"></i><span>${f.name}</span>`
-  explorerContent.appendChild(el)
-  i++
-  setTimeout(addNextFile,350)
-}
-addNextFile()
-
-// Google Sign-In + Drive API
-const CLIENT_ID='549003131640-o9umsg7tu0uisopde76mlf3lg5krt5g7.apps.googleusercontent.com'
-const SCOPES='https://www.googleapis.com/auth/drive.file'
-let tokenClient
-
-window.onload=()=>{
-  google.accounts.id.initialize({
-    client_id: CLIENT_ID,
-    callback: handleCredentialResponse
-  })
-}
-
-function handleCredentialResponse(response){
-  console.log("Signed in with Google ID token:", response.credential)
-  gapi.load('client', initializeGapi)
-}
-
-async function initializeGapi(){
-  await gapi.client.init({discoveryDocs:["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"]})
+async function initGapi(){
+  await gapi.client.init({
+    discoveryDocs:["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"]
+  });
   tokenClient=google.accounts.oauth2.initTokenClient({
-    client_id: CLIENT_ID,
-    scope: SCOPES,
-    callback: async (tokenResponse)=>{
-      if(tokenResponse.error){console.error(tokenResponse);return}
-      await uploadProfile()
-    }
-  })
-  tokenClient.requestAccessToken({prompt:'consent'})
+    client_id:CLIENT_ID,
+    scope:SCOPES,
+    callback:handleToken
+  });
+  tokenClient.requestAccessToken({prompt:'consent'});
 }
 
-async function uploadProfile(){
-  const name=nameInput.value.trim()
-  if(!name||!avatarData){showAlert("Please enter your name and upload an image.");return}
-  const profile={uuid:crypto.randomUUID(),name,avatar:avatarData}
-  localStorage.setItem('rc_profile_v2',JSON.stringify(profile))
-  uploadingOverlay.style.display='flex'
-
-  const metadata={name:'account.json',mimeType:'application/json'}
-  const form=new FormData()
-  form.append('metadata',new Blob([JSON.stringify(metadata)],{type:'application/json'}))
-  form.append('file',new Blob([JSON.stringify(profile)],{type:'application/json'}))
-  const accessToken=gapi.client.getToken().access_token
-  const res=await fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart',{
-    method:'POST',
-    headers:{'Authorization':'Bearer '+accessToken},
-    body:form
-  })
-  console.log("Uploaded:",await res.json())
-  setTimeout(()=>{uploadingOverlay.style.display='none';window.location.href='index.html'},1200)
+async function handleToken(tokenResponse){
+  if(tokenResponse.error){console.error(tokenResponse);return;}
+  const accessToken=gapi.client.getToken().access_token;
+  const userInfo=await fetch('https://www.googleapis.com/oauth2/v2/userinfo',{
+    headers:{'Authorization':'Bearer '+accessToken}
+  }).then(r=>r.json());
+  displayUser(userInfo);
 }
 
-document.getElementById('saveProfile').addEventListener('click',()=>{
-  google.accounts.id.prompt()
-})
+function displayUser(user){
+  loadingOverlay.style.display='none';
+  googleBtn.style.display='none';
+  profileCard.style.display='flex';
+  profilePic.src=user.picture;
+  profileName.textContent=user.name;
+  profileEmail.textContent=user.email;
+  const profileData={
+    uuid:crypto.randomUUID(),
+    name:user.name,
+    email:user.email,
+    avatar:user.picture,
+    createdAt:new Date().toISOString()
+  };
+  localStorage.setItem('rc_profile_v2',JSON.stringify(profileData));
+  setTimeout(()=>{window.location.href='index.html'},1500);
+}
 
-// Disable right-click and devtools
-document.addEventListener('contextmenu', e=>e.preventDefault())
+// Disable right-click/devtools
+document.addEventListener('contextmenu', e=>e.preventDefault());
 document.addEventListener('keydown', e=>{
   if(e.key==='F12'||(e.ctrlKey&&e.shiftKey&&['I','J','C'].includes(e.key.toUpperCase()))||(e.ctrlKey&&['U','S','P'].includes(e.key.toUpperCase()))){
-    e.preventDefault(); e.stopPropagation()
+    e.preventDefault(); e.stopPropagation();
   }
-})
+});
 </script>
-
 </body>
 </html>
